[gd_scene load_steps=6 format=3 uid="uid://cx1d5ln4n76ug"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_n8kkr"]
[ext_resource type="Texture2D" uid="uid://tbh50to11vbr" path="res://assets/arrow.png" id="2_cqlix"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_rsc8y"]
friction = 0.8
bounce = 0.2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_li4oe"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mm7xo"]
size = Vector2(38, 4)

[node name="Player" type="RigidBody2D" node_paths=PackedStringArray("jumpStrengthBar")]
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_rsc8y")
lock_rotation = true
script = ExtResource("1_n8kkr")
gravityOnPeak = 2.6
jumpStrengthBar = NodePath("ArrowAxis/Arrow/JumpStrengthBar")
minJumpStrength = 300.0
maxJumpStrength = 3000.0
arrowRotationSpeed = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_li4oe")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.709804, 0.376471, 0.615686, 1)

[node name="ArrowAxis" type="Node2D" parent="."]

[node name="Arrow" type="Sprite2D" parent="ArrowAxis"]
clip_children = 1
position = Vector2(55, -1)
texture = ExtResource("2_cqlix")

[node name="ArrowMarker" type="Marker2D" parent="ArrowAxis/Arrow"]
position = Vector2(25, 0)

[node name="JumpStrengthBar" type="ProgressBar" parent="ArrowAxis/Arrow"]
offset_left = -29.0
offset_top = -22.0
offset_right = 29.0
offset_bottom = 20.0
show_percentage = false

[node name="GroundCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundCheck"]
position = Vector2(0, 19)
shape = SubResource("RectangleShape2D_mm7xo")
